--- a/Web/custWeb_style.css
+++ b/Web/custWeb_style.css
@@ -15,6 +15,8 @@ p{
     font-family:sans-serif;
 /*    float:left;*/
 }
+/*--------------------------For input Class--------------------------*/
+
 img.fixed{
 	position:fixed;
 	float: left;
@@ -33,6 +35,8 @@ input.button:hover{
     color:white;
     background-color:rgb(0,70,42);
 }
+
+/*--------------------------For div Class--------------------------*/
 .title{
 	width:100%;
 	height:150px;
@@ -77,6 +81,15 @@ input.button:hover{
     width:80%;
     margin-left: 50px;
 }
+.footer{
+    text-align: center;
+    border-top:2px solid #aaa;
+    margin: 20px 20px 0;
+    font-size: 12px;
+}
+
+
+/*--------------------------For font--------------------------*/
 @font-face {
     font-family: 'pacificoregular';
     src: url('/Users/soua/workspace/RobertoClemente_Server/Web/pacifico_font/pacifico-webfont.woff2') format('woff2'),
