--- a/Web/dash_style.css
+++ b/Web/dash_style.css
@@ -16,10 +16,12 @@ h2{
 	font-size: 30px;
 	color: rgb(0,70,42);
 	text-align: center;
-    background-color:rgb(217,217,184);
+/*    background-color:rgb(217,217,184);*/
 }
-p{
-	font-size: 20px;
+
+/*--------------------------For input Class--------------------------*/
+.info{
+    font-size: 20px;
 	text-indent:20px;
 }
 img.fixed{
@@ -39,10 +41,6 @@ img.fixed{
 	height:150px;
 	background-color: rgb(0,70,42);
 	float:left;
-	/*border-bottom-width:thin;
-	border-bottom-color:rgba(25,80,100,0);
-	border-bottom:solid;*/
-
 }
 .main_Order{
 	width:50%;
@@ -62,7 +60,14 @@ img.fixed{
 	/*background-color:yellow;*/
 	float:left;
 }
+.footer{
+    text-align: center;
+    border-top:2px solid #aaa;
+    margin: 20px 20px 0;
+    font-size: 12px;
+}
 
+/*--------------------------For font--------------------------*/
 @font-face {
     font-family: 'pacificoregular';
     src: url('/Users/soua/workspace/RobertoClemente_Server/Web/pacifico_font/pacifico-webfont.woff2') format('woff2'),
