--- a/Server/web/custWeb_login.ejs
+++ b/Server/web/custWeb_login.ejs
@@ -20,13 +20,16 @@
                 </div>
                 <div class="content">
                     <h2>Login</h2>
-                    <div>
-                        <label for="loginID"></label>
+                    <div class="login">
+                        <label for="loginId">ID</label>
+                        <input type="text" id="loginId" name="loginId" placeholder="ID" >
+                        <button type="submit" class="btn_login"  disable> Login</button>
                     </div>
+                    
                 </div>
-            </div>
             <div class="footer">
                 <p class="copyright">&copy;Roberto Clemente</p>
+            </div>
             </div>
         </div>
 	</body>
