--- a/Server/web/part/style/custWeb_style.css
+++ b/Server/web/part/style/custWeb_style.css
@@ -14,13 +14,12 @@ h2{
 p{
     font-family:sans-serif;
     font-size: 20px;
-/*    float:left;*/
 }
 /*--------------------------For input Class--------------------------*/
 
 img.fixed{
 	position:scroll;
-/*	float: left;*/
+	float: left;
 /*    padding: 10px;*/
 }
 input.button{
@@ -32,23 +31,46 @@ input.button{
     color: rgb(0,70,42); 
     padding: 5px;
     font-size: 18px;
+    
+/*    position: scroll;*/
+    margin-left:50px;
+    
 }
 input.button:hover{
     color:white;
     background-color:rgb(0,70,42);
 }
-
+.btn_login{
+    border-top-left-radius: 5px; 
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border: 1px solid rgb(0,70,42); 
+    color: rgb(0,70,42); 
+    padding: 5px;
+    
+    margin-left:20px;
+    margin-top:10px;
+}
+.btn_login:hover{
+    color:white;
+    background-color: rgb(0,70,42);
+}
 /*--------------------------For div Class--------------------------*/
+.frame{
+    width: 100%;
+    height: 1200px;
+}
 .title{
 	width:100%;
-	height:150px;
+	height:100px;
 	background-color: rgb(0,70,42);
-	float:left;
+	float:top;
     margin-bottom: 20px;
 }
 .container{
-    width: 100%;
-    height: 1200px;
+    width:100%;
+    height:80%;
 }
 .nav{
     float: left;
@@ -56,6 +78,7 @@ input.button:hover{
     background: rgb(217,217,184);
     color: antiquewhite;
     margin-right:50px;
+    font-size:20px;
 }
 .nav-list{
     list-style: none;
@@ -76,11 +99,17 @@ input.button:hover{
 .content{
 /*    float:left;*/
     width:80%;
+    
+}
+.login{
+    text-align: center;
+    font-size: 20px;
 }
 .info{
     float:left;
     width:50%;
     margin-left: 50px;
+    text-indent: 20px;
 }
 .footer{
     width: 100%;
@@ -90,8 +119,9 @@ input.button:hover{
     margin: 20px 20px 0;
     font-size: 12px;
 }
-
-
+.copyright{
+    font-size: 12px;
+}
 /*--------------------------For font--------------------------*/
 @font-face {
     font-family: 'pacificoregular';
