--- a/Server/web/part/style/dash_style.css
+++ b/Server/web/part/style/dash_style.css
@@ -3,25 +3,22 @@ body{
 }
 h1{
 	font-family: pacificoregular;
-	font-size: 48px;
-
+	font-size: 56px;
 	color: white;
-
 	text-align: center;
-
 	/*background-color: rgb(0,70,42);*/
 	/*background-repeat: repeat-y;*/
 }
 h2{
-	font-size: 30px;
-	color: rgb(0,70,42);
+	font-size: 42px;
+	color: #d69097;
 	text-align: center;
 /*    background-color:rgb(217,217,184);*/
 }
 
 /*--------------------------For input Class--------------------------*/
 img.fixed{
-	position:fixed;
+	position:local;
 	left:280px;
 	top:1px;
     width:250px;
@@ -35,71 +32,180 @@ span.backlog{
 }
 span.throughput{
     font-family: serif;
-    color:dodgerblue;
+    color:royalblue;
+}
+span.total{
+    font-family: serif;
+    color:rgb(0,70,42);
 }
 span.redItem{
     color:white;
-    font-size:30px;
+/*    font-size:30px;*/
     background-color: red;
+    padding:5px;
 }
 span.greenItem{
     color:white;
-    font-size:30px;
+/*    font-size:30px;*/
     background-color: forestgreen;
+    padding:5px;
 }
 span.blueItem{
     color:white;
-    font-size:30px;
+/*    font-size:30px;*/
     background-color: blue;
+    padding:5px;
+}
+.btn_time{
+    font-size:24px;
+    margin-left:100px;
+    font-family: monospace;
+
+    border-top-left-radius: 5px; 
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border: 1px solid rgb(0,70,42); 
+    color: rgb(0,70,42); 
+    padding: 5px;
+    
+}
+.btn_time:hover{
+    color:white;
+    background-color:rgb(0,70,42);
 }
 /*--------------------------For p Class--------------------------*/
 .info{
-    font-size: 30px;
-	text-indent:20px;
+    font-size: 36px;
+	text-indent:30px;
+    text-align:center;
+}
+.battery{
+    font-size: 32px;
+    text-indent:30px;
 }
 
 /*--------------------------For div Class--------------------------*/
 .frame{
 	width:100%;
 	height:1200px;
+/*    height:100%;*/
 }
-.container{
+.INFO_container{
     width:100%;
-    height:80%;
+    height:45%;
+}
+.GRAPH_container{
+    width:100%;
+    height:45%;
+    border-top: 8px dashed #a36269;
 }
 .title{
 	width:100%;
-	height:100px;
+	height:8%;
 	background-color: rgb(0,70,42);
 	float:top;
+/*    border-color:#001f00;*/
+    border: 8px solid #001f00;
 }
 .main_Order{
-	width:33%;
-	height:30%;
+	width:32%;
+	height:100%;
 	/*background-color:red;*/
 	float:left;
+    border-right: 8px dashed #a36269;
 }
 .main_Robot{
 	width:33%;		
-	height:30%;	
+	height:100%;	
 /*background-color:blue;*/
 	float:left;
+    border-right: 8px dashed #a36269;
 }
 .main_Others{
 	width:33%;	
-	height:30%;
+/*	height:30%;*/
 	/*background-color:yellow;*/
 	float:left;
 }
+.main_battery{
+/*    width:33%;*/
+    float:left;
+}
+
+.order_graph{
+    width:48%;
+    height:100%;
+    float:left;
+/*    border-top: 2px solid rgb(0,70,42);*/
+    border-right: 8px dashed #a36269;
+}
+.time_graph{
+    width:50%;
+    float:left;
+}
 .footer{
     width:100%;
-    height:10%;
+    height:1%;
     
     float:left;
     text-align: center;
     border-top:2px solid #aaa;
-    margin: 20px 20px 0;
+    margin: 10px 10px 0;
     font-size: 12px;
+}
+
+#chart-wrapper{
+    position:absolute;
+    top:100%;
+    left:40%;
+/*    transform:translate(-50%,-50%);*/
+
+}
+#chart{
+    border:solid;
+    border-width:0 0 2px 2px;
+    border-color:#004429;
+    background: #e0e0e0;
+}
+#weeks{
+    margin-left:60px;
+}
+#weeks>span{
+    width: 60px;
+    display: inline-block;
+    color:#004429;
+    font-size:16px;
+}
+#weeks>span:before {
+content: '';
+width: 1px;
+height: 5px;
+position: absolute;
+background-color: #004429;
+border-radius: 50%;
+bottom: 20px;
+}
+#values{
+    position:absolute;
+    top:0;
+    left:-30px;
+    margin-top: -2px;
+}
+#values>span{
+    display:block;
+    color:#004429;
+    font-size:16px;
+    height:30px;
+}
+#values>span:after {
+content: '';
+width: 4px;
+height: 1px;
+position: absolute;
+background-color: #004429;
+border-radius: 50%;
+margin-left: 5px;
 }
 
 /*--------------------------For font--------------------------*/
