--- a/Server/web/dashboard.ejs
+++ b/Server/web/dashboard.ejs
@@ -11,7 +11,7 @@
 		<div class="frame">
             <div class="title">
 				<h1>Roberto Clemente</h1>
-				<img src="./part/style/dobby_title.png" class='fixed'>
+<!--				<img id="dobby" src="./part/style/dobby_title.png"/>-->
 			</div>
             <!-- title class end -->
             
@@ -44,7 +44,7 @@
                     <div class="main_battery">
                         <h2></h2>
                         <p class="battery" id ="first">First battery</p>
-                        <button type="submit" class="btn_time" onclick="time()">START</button>
+                        <button type="submit" class="btn_time" onclick="time(<%= exerciseNum %>)">START</button>
                         <button type="submit" class="btn_time">END</button>
                         <br/>
                         <p class="battery">Second battery &nbsp;
@@ -68,7 +68,7 @@
                     <h2>Order Graph</h2>
                     <div id="chart-wrapper">
                         <div id="values"></div>
-                        <canvas id="chart"></canvas>
+                        <canvas id="orderChart"></canvas>
                         <div id="weeks"></div>
                     </div>
                 </div>
@@ -86,67 +86,7 @@
             </div>	
             <!-- footer class end -->
         </div>
-        <script>
-            function time(){
-                document.getElementById('first').innerHTML = 'First battery  :  ' + <%= exerciseNum %>;
-            }
-            
-            var chart = document.getElementById("chart").getContext("2d");
-
-            chart.canvas.width = "700";
-            chart.canvas.height = "300";
-
-            var cw = chart.canvas.width;
-            var ch = chart.canvas.height;
-
-            var w = [0,cw/12,2*(cw/12),3*(cw/12),4*(cw/12),5*(cw/12),6*(cw/12),7*(cw/12),8*(cw/12),9*(cw/12),10*(cw/12),11*(cw/12),12*(cw/12)];
-
-            var h = [ch,ch-ch/10,ch-2*(ch/10),ch-3*(ch/10),ch-4*(ch/10),ch-5*(ch/10),ch-6*(ch/10),ch-7*(ch/10),ch-8*(ch/10),ch-9*(ch/10),ch-10*(ch/10)];
-
-            var weeks = ['5','10','15','20','25','30','35','40','45','50','55'];
-            var values = [10,20,30,40,50,60,70,80,90,100];
-            var val = [];
-
-            for(var i = 0;i<weeks.length;i++){
-                var week = document.createElement('span');
-                var text = document.createTextNode(weeks[i])
-                week.appendChild(text);
-                document.getElementById('weeks').appendChild(week);
-            }
-
-            for(var i = values.length-1;i>=0;i--){
-                var value = document.createElement('span');
-                var text_value = document.createTextNode(values[i])
-                value.appendChild(text_value);
-                document.getElementById('values').appendChild(value);
-            }
-
-            var ch = document.getElementById("chart");
-            chart.beginPath();
-
-            //actual graph      
-            for(var i =0;i<w.length;i++){
-                chart.moveTo(0, ch);
-                chart.strokeStyle = '#004429';
-                chart.lineWidth = 2;
-                chart.lineTo(w[i], h[Math.floor((Math.random() * 9) + 1)]);
-                chart.stroke();
-            }
-
-            chart.beginPath();
-            for(var i =0;i<w.length;i++){
-                chart.moveTo(0, ch);
-                chart.strokeStyle = '#d59096';
-                chart.lineWidth = 2;
-                chart.lineTo(w[i], h[Math.floor((Math.random() * 9) + 1)]);
-                chart.stroke();
-            }
-            
-            var beforex = document.querySelector('#weeks>span:before');
-
-            for(var i = 1;i<w.length;i++){
-                beforex.style.marginLeft = w[i];
-            }
+        <script type="text/javascript" src="dash_script.js">
         </script>
 	</body>
 </html>
