--- a/Server/web/part/style/dash_style.css
+++ b/Server/web/part/style/dash_style.css
@@ -154,10 +154,17 @@ span.blueItem{
     font-size: 12px;
 }
 
-#chart-wrapper{
+#orderChart-wrapper{
     position:absolute;
     top:60%;
     left:5%;
+/*    transform:translate(-50%,-50%);*/
+
+}
+#timeChart-wrapper{
+    position:absolute;
+    top:60%;
+    left:55%;
 /*    transform:translate(-50%,-50%);*/
 
 }
@@ -167,17 +174,42 @@ span.blueItem{
     border-color:#004429;
     background: rgb(243,243,245);
 }
-#weeks{
+#timeChart{
+    border: solid;
+    border-width:0 0 2px 2px;
+    border-color:#004429;
+    background: rgb(243,243,245);
+}
+#mins{
     margin-left:60px;
 }
-#weeks>span{
-    width: 80px;
+#mins>span{
+    width: 58px;
     display: inline-block;
     color:#004429;
     font-size:16px;
-/*    margin-left: 10px;*/
+    margin-left: 25px;
 }
-#weeks>span:before {
+#mins>span:before {
+content: '';
+width: 1px;
+height: 5px;
+position: absolute;
+background-color: #004429;
+border-radius: 50%;
+bottom: 20px;
+}
+#times{
+    margin-left:60px;
+}
+#times>span{
+    width: 58px;
+    display: inline-block;
+    color:#004429;
+    font-size:16px;
+    margin-left: 25px;
+}
+#times>span:before {
 content: '';
 width: 1px;
 height: 5px;
