--- a/Server/web/part/style/dash_style.css
+++ b/Server/web/part/style/dash_style.css
@@ -58,8 +58,9 @@ span.blueItem{
 }
 .btn_time{
     font-size:24px;
-    margin-left:100px;
+    margin-left: 50px;
     font-family: monospace;
+    text-align: center;
 
     border-top-left-radius: 5px; 
     border-bottom-left-radius: 5px;
@@ -82,7 +83,8 @@ span.blueItem{
 }
 .battery{
     font-size: 32px;
-    text-indent:30px;
+    text-indent:200px;
+/*    text-align : center;*/
 }
 
 /*--------------------------For div Class--------------------------*/
@@ -126,27 +128,26 @@ span.blueItem{
 /*	height:30%;*/
 	/*background-color:yellow;*/
 	float:left;
+    text-align:center;
 }
 .main_battery{
 /*    width:33%;*/
     float:left;
 }
-
 .order_graph{
     width:48%;
     height:100%;
     float:left;
-/*    border-top: 2px solid rgb(0,70,42);*/
     border-right: 8px dashed #a36269;
 }
 .time_graph{
-    width:50%;
+    width:48%;
+    height:100%;
     float:left;
 }
 .footer{
     width:100%;
     height:1%;
-    
     float:left;
     text-align: center;
     border-top:2px solid #aaa;
@@ -158,15 +159,11 @@ span.blueItem{
     position:absolute;
     top:60%;
     left:5%;
-/*    transform:translate(-50%,-50%);*/
-
 }
 #timeChart-wrapper{
     position:absolute;
     top:60%;
     left:55%;
-/*    transform:translate(-50%,-50%);*/
-
 }
 #orderChart{
     border:solid;
@@ -199,17 +196,17 @@ background-color: #004429;
 border-radius: 50%;
 bottom: 20px;
 }
-#times{
-    margin-left:60px;
+#items{
+    margin-left:20px;
 }
-#times>span{
-    width: 58px;
+#items>span{
+    width: 80px;
     display: inline-block;
     color:#004429;
     font-size:16px;
     margin-left: 25px;
 }
-#times>span:before {
+#items>span:before {
 content: '';
 width: 1px;
 height: 5px;
@@ -218,6 +215,7 @@ background-color: #004429;
 border-radius: 50%;
 bottom: 20px;
 }
+/*y axis*/
 #values{
     position:absolute;
     top:0;
@@ -239,7 +237,27 @@ background-color: #004429;
 border-radius: 50%;
 margin-left: 5px;
 }
-
+#times{
+    position:absolute;
+    top:0;
+    left:-30px;
+    margin-top: -2px;
+}
+#times>span{
+    display:block;
+    color:#004429;
+    font-size:16px;
+    height:40px;
+}
+#times>span:after {
+content: '';
+width: 4px;
+height: 1px;
+position: absolute;
+background-color: #004429;
+border-radius: 50%;
+margin-left: 5px;
+}
 /*--------------------------For font--------------------------*/
 @font-face {
     font-family: 'pacificoregular';
