change for battery time

--- a/Server/web/custWeb_info.ejs
+++ b/Server/web/custWeb_info.ejs
@@ -8,7 +8,7 @@
 	<body>
         <div class="frame">
             <div class="title">
-                <h1>NOZAMA</h1>
+                <h1>Roberto Clemente</h1>
             </div>
             <div class="container">
                 <div class="nav">
