draw graph for order

--- a/Server/web/custWeb_login.ejs
+++ b/Server/web/custWeb_login.ejs
@@ -21,15 +21,16 @@
                 <div class="content">
                     <h2>Login</h2>
                     <div class="login">
-                        <label for="loginId">ID</label>
-                        <input type="text" id="loginId" name="loginId" placeholder="ID" >
-                        <button type="submit" class="btn_login"  disable> Login</button>
+                        <form action="/custInfo" method="POST">
+                            <label for="loginId" id="loginId">ID</label>
+                            <input type="text" id="loginId" name="loginId" placeholder="ID">
+                            <button type="submit" class="btn_login"  disable> Login</button>
+                        </form>
                     </div>
-                    
                 </div>
+            </div>
             <div class="footer">
                 <p class="copyright">&copy;Roberto Clemente</p>
-            </div>
             </div>
         </div>
 	</body>
