--- a/Server/web/part/style/custWeb_style.css
+++ b/Server/web/part/style/custWeb_style.css
@@ -1,22 +1,22 @@
 h1{
     font-family: pacificoregular;
-	font-size: 52px;
+	font-size: 56px;
 	font-weight: normal;
 	color: ghostwhite;
     text-align: center;
+    margin :10px;
 }
 h2{
     font-family: monospace;
-    font-size: 26px;
+    font-size: 42px;
     color: rgb(0,70,42);
     text-align: center;
 }
 p{
     font-family:sans-serif;
-    font-size: 20px;
+    font-size: 36px;
 }
 /*--------------------------For input Class--------------------------*/
-
 img.fixed{
 	position:scroll;
 	float: left;
@@ -48,6 +48,7 @@ input.button:hover{
     border: 1px solid rgb(0,70,42); 
     color: rgb(0,70,42); 
     padding: 5px;
+    font-size:36px;
     
     margin-left:20px;
     margin-top:10px;
@@ -56,17 +57,22 @@ input.button:hover{
     color:white;
     background-color: rgb(0,70,42);
 }
+#loginId{
+    font-size: 36px;
+    margin-left:50px;
+}
 /*--------------------------For div Class--------------------------*/
 .frame{
-    width: 100%;
+    width: 2530px;
     height: 1200px;
 }
 .title{
 	width:100%;
-	height:100px;
+	height:10%;
 	background-color: rgb(0,70,42);
 	float:top;
     margin-bottom: 20px;
+    border:8px solid #001f00;
 }
 .container{
     width:100%;
