--- a/Server/web/part/style/dash_style.css
+++ b/Server/web/part/style/dash_style.css
@@ -13,8 +13,16 @@ h1{
 h2{
 	font-size: 42px;
 	color: #d69097;
-	text-align: center;
+    text-align: center;
+    /* display:inline; */
 /*    background-color:rgb(217,217,184);*/
+    margin:0;
+    padding-top : 15px;
+}
+h3{
+    text-align:center;
+    /* display:inline; */
+    margin: 0;
 }
 
 /*--------------------------For input Class--------------------------*/
@@ -89,23 +97,34 @@ span.blueItem{
 }
 .battery{
     font-size: 32px;
-    text-indent:200px;
+    text-indent:150px;
 /*    text-align : center;*/
 }
-
+.time{
+    font-size:49px;
+    text-align:center;
+    color: #ff1744;
+}
 /*--------------------------For div Class--------------------------*/
 .frame{
 	width:2530px;
-	height:1200px;
+    height:1200px;
+    /* width :100%; */
 /*    height:100%;*/
+}
+.TIME_container{
+    width:100%;
+    height:5%;
+    border-bottom: 8px dashed #a36269;
+    margin : 0px;
 }
 .INFO_container{
     width:100%;
-    height:45%;
+    height:40%;
 }
 .GRAPH_container{
     width:100%;
-    height:45%;
+    height:47%;
     border-top: 8px dashed #a36269;
 }
 .title{
@@ -183,6 +202,7 @@ span.blueItem{
     border-color:#004429;
     background: rgb(243,243,245);
 }
+/* x axis for OrderChart */
 #mins{
     margin-left:60px;
 }
@@ -202,15 +222,16 @@ background-color: #004429;
 border-radius: 50%;
 bottom: 20px;
 }
+/* x axis for TimeChart */
 #items{
-    margin-left:20px;
+    margin-left:60px;
 }
 #items>span{
-    width: 60px;
+    width: 58px;
     display: inline-block;
     color:#004429;
     font-size:16px;
-    margin-left: 30px;
+    margin-left: 25px;
 }
 #items>span:before {
 content: '';
@@ -221,28 +242,52 @@ background-color: #004429;
 border-radius: 50%;
 bottom: 20px;
 }
-/*y axis*/
-#values{
+/*y axis for OrderChart */
+#pendingValues{
     position:absolute;
     top:0;
     left:-30px;
     margin-top: -2px;
 }
-#values>span{
+#pendingValues>span{
     display:block;
     color:#004429;
     font-size:16px;
     height:40px;
 }
-#values>span:after {
-content: '';
-width: 4px;
-height: 1px;
-position: absolute;
-background-color: #004429;
-border-radius: 50%;
-margin-left: 5px;
+#pendingValues>span:after {
+    content: '';
+    width: 4px;
+    height: 1px;
+    position: absolute;
+    background-color: #004429;
+    border-radius: 50%;
+    margin-left: 5px;
 }
+/* y axis for OrderChart */
+#slopeValues{
+    position:absolute;
+    top:0;
+    right:-15px;
+    margin-top:-1px;
+}
+#slopeValues>span{
+    display:block;
+    color:#FF1800;
+    font-size:16px;
+    height:40px;
+    margin-right:-3px;
+}
+#slopeValues>span:before{
+    content: '';
+    width: 4px;
+    height: 1px;
+    position:absolute;
+    background-color: #FF1800;
+    border-radius:50%;
+    margin-left: -3px;
+}
+/* y axis for TimeChart */
 #times{
     position:absolute;
     top:0;
