make battery button well make Highest backlog

--- a/Server/web/dash_firstB.ejs
+++ b/Server/web/dash_firstB.ejs
@@ -24,7 +24,8 @@
                     <p class="info">Total Order : <span class="total" id="totalorder" ><%= totalOrders %></span></p>
                     <p class="info">Complete Orders : <span class="throughput"><%= deliveredOrders %></span></p>
                     <p class="info">Backlog : <span class="backlog"><%= pendingOrders %></span></p>
-                    <p class="info">Backlog Items : <span class="backlog"><%= pendingItems%></span></p>
+                    <p class="info" id="highBacklog"></p>
+                    <!-- <p class="info">Backlog Items : <span class="backlog"><%= pendingItems%></span></p> -->
 			     </div>
                 <!-- Order class end -->
                 <div class="main_Robot">
@@ -47,14 +48,15 @@
                         <p class="battery">
                             Robot Connection : <%= robotConnected %>
                         </p>
-                        <div class="battery" id="current_time"></div><br/>
+                        <!-- <div class="battery" id="current_time"></div><br/> -->
                         <div class="battery" id="firstB" style="display: none"><%=firstB%></div>
                         <div class="battery" id="firstB_time"></div>
                         <br/>
                         <from action="/secondB" method="POST">
                             <p class = "battery" id = "second">
-                                Second battery start time : <input type="text" name = "secondB">
-                                <button class="btn_time", type="submit">START</button>
+                                Second battery 
+                                <!-- <input type="text" name = "secondB"> -->
+                                <button class="btn_time", type="submit" id = "secondS">START</button>
                             </p>
                         </from>
                         
