--- a/Server/web/dash_secondB.ejs
+++ b/Server/web/dash_secondB.ejs
@@ -50,11 +50,8 @@
                         <div class="battery" id="current_time"></div><br/>
                         <div class="battery" id="firstB" style="display: none"><%=firstB%></div>
                         <div class="battery" id="firstB_time"></div>
-                        <br/>
-                        <p class = "battery" id = "second">
-                            Second battery &nbsp;
-                            <button class="btn_time", id="secondB" onclick="second(<%=robotBatteryTime%>)">START</button>
-                        </p>
+                        <div class = "battery" id="secondB" style="display: none"><%secondB%></div>
+                        <div class = "battery" id="secondB_time"></div>
                     </div>
                     
                 </div>
@@ -88,7 +85,7 @@
             <!-- GRAPH_container end -->
             
 			<div class="footer">
-                <p class="copyright">&copy;Roberto Clemente</p>
+                <p class="copyright">&copy; Roberto Clemente</p>
             </div>	
             <!-- footer class end -->
         </div>
