--- a/Server/web/part/style/dash_style.css
+++ b/Server/web/part/style/dash_style.css
@@ -1,5 +1,5 @@
 body{
-	font-family: helverica;
+	font-family: Noco_sans;
 }
 h1{
 	font-family: pacificoregular;
@@ -114,7 +114,7 @@ span.blueItem{
 }
 .TIME_container{
     width:100%;
-    height:5%;
+    height:6%;
     border-bottom: 8px dashed #a36269;
     margin : 0px;
 }
@@ -129,7 +129,7 @@ span.blueItem{
 }
 .title{
 	width:100%;
-	height:10%;
+	height:9%;
 	background-color: rgb(0,70,42);
 	float:top;
 /*    border-color:#001f00;*/
@@ -314,6 +314,13 @@ margin-left: 5px;
     font-family: 'pacificoregular';
     src: url('../style/pacifico_font/pacifico-webfont.woff2') format('woff2'),
          url('../style/pacifico_font/pacifico-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Noco_sans';
+    src: url('../style/Noco_Sans/notosans-regular-webfont.woff2') format('woff2'),
+         url('../style/Noco_Sans/notosans-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
