--- a/Server/web/dashboard.ejs
+++ b/Server/web/dashboard.ejs
@@ -48,13 +48,17 @@
                             Robot Connection : <%= robotConnected %>
                         </p>
                         <!-- <div class="battery" id="current_time"></div> -->
-                            <form action="/firstB" method="POST">
-                                <p class="battery" id = "first">
-                                    First Battery 
-                                    <!-- <input type='text' name = 'firstB'> -->
-                                    <button type="submit" class="btn_time" id="firstS">START</button>
-                                </p>
-                            </form>
+                        <form action="/firstB" method="POST">
+                            <p class="battery" id = "first">
+                                First Battery 
+                                <!-- <input type='text' name = 'firstB'> -->
+                                <button type="submit" class="btn_time" id="firstS">START</button>
+                            </p>
+                        </form>
+                        <p class="battery" id="second">
+                            Second Battery
+                            <button type="submit" class="btn_time" id="secondS">START</button>
+                        </p>
                     </div>
                     <!-- main battery class end -->
                 </div>
